package com.springbonbons.models.entities;

public class Note {
    private int note;
}
